only add status if present